--- a/antora/components/comguide/modules/ROOT/pages/updating-the-website.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/updating-the-website.adoc
@@ -4,7 +4,7 @@
 :page-partial:
 
 As part of the release process we xref:post-release-successful.adoc#generate-website[generate] and publish the website.
-An (intentional) side-effect of this process is to create a branch for the release (that is, `{page-isisrel}`).
+An (intentional) side-effect of this process is to create a branch for the release (that is, `{page-causewayrel}`).
 This branch can then be used for documentation updates.
 
 == Update docs
@@ -15,7 +15,7 @@ In the regular `causeway` repo:
 +
 [source,bash,subs="attributes+"]
 ----
-git checkout {page-isisrel}
+git checkout {page-causewayrel}
 ----
 
 * make documentation updates, and commit changes
