--- a/antora/components/docs/modules/ROOT/pages/downloads/how-to.adoc
+++ b/antora/components/docs/modules/ROOT/pages/downloads/how-to.adoc
@@ -21,7 +21,7 @@ If you just want to get going quickly, we suggest using our xref:docs:starters:h
 
 If you want to build Apache Causeway from formally released source tarballs, you can download from here:
 
-* https://www.apache.org/dyn/closer.cgi/causeway/causeway-core/causeway-{page-isisrel}-source-release.zip[causeway-{page-isisrel}] (https://www.apache.org/dist/causeway/causeway-core/causeway-{page-isisrel}-source-release.zip.asc[asc], https://www.apache.org/dist/causeway/causeway-core/causeway-{page-isisrel}-source-release.zip.md5[md5])
+* https://www.apache.org/dyn/closer.cgi/causeway/causeway-core/causeway-{page-causewayrel}-source-release.zip[causeway-{page-causewayrel}] (https://www.apache.org/dist/causeway/causeway-core/causeway-{page-causewayrel}-source-release.zip.asc[asc], https://www.apache.org/dist/causeway/causeway-core/causeway-{page-causewayrel}-source-release.zip.md5[md5])
 
 
 
@@ -39,7 +39,7 @@ Then verify the signatures using a command such as:
 [source,bash,subs="attributes+"]
 ----
 pgpk -a KEYS
-pgpv causeway-{page-isisrel}-source-release.zip.asc causeway-{page-isisrel}-source-release.zip
+pgpv causeway-{page-causewayrel}-source-release.zip.asc causeway-{page-causewayrel}-source-release.zip
 ----
 
 or
@@ -47,7 +47,7 @@ or
 [source,bash,subs="attributes+"]
 ----
 pgp -ka KEYS
-pgp causeway-{page-isisrel}-source-release.zip.asc causeway-{page-isisrel}-source-release.zip
+pgp causeway-{page-causewayrel}-source-release.zip.asc causeway-{page-causewayrel}-source-release.zip
 ----
 
 or
@@ -55,7 +55,7 @@ or
 [source,bash,subs="attributes+"]
 ----
 gpg --import KEYS
-gpg -verify causeway-{page-isisrel}-source-release.zip.asc causeway-{page-isisrel}-source-release.zip
+gpg -verify causeway-{page-causewayrel}-source-release.zip.asc causeway-{page-causewayrel}-source-release.zip
 ----
 
 
@@ -90,7 +90,7 @@ See link:https://gitbox.apache.org/setup/[gitbox setup] for more details on how 
 
 == DOAP RDF File
 
-The http://projects.apache.org/doap.html[description of a project] RDF file for Apache Causeway can be downloaded link:https://causeway.apache.org/doap_isis.rdf[here].
+The http://projects.apache.org/doap.html[description of a project] RDF file for Apache Causeway can be downloaded link:https://causeway.apache.org/doap_causeway.rdf[here].
 
 
 
