--- a/antora/components/docs/modules/ROOT/partials/module-nav/framework.adoc
+++ b/antora/components/docs/modules/ROOT/partials/module-nav/framework.adoc
@@ -10,7 +10,7 @@
 *** xref:tooling:ROOT:about.adoc[Tooling]
 
 ** Automated Analysis
-*** link:https://sonarcloud.io/dashboard?id=apache_isis[SonarCloud.io]
+*** link:https://sonarcloud.io/dashboard?id=apache_causeway[SonarCloud.io]
 *** link:https://fisheye.apache.org/browse/~br=master/causeway-git/[ASF Fisheye]
 
 
