--- a/persistence/jpa/adoc/modules/ROOT/pages/db-schemas.adoc
+++ b/persistence/jpa/adoc/modules/ROOT/pages/db-schemas.adoc
@@ -17,7 +17,7 @@ Its `ApplicationUser` entity is defined as:
 ----
 @Entity
 @Table(
-        schema = "isisExtSecman",
+        schema = "causewayExtSecman",
         name = "ApplicationUser",
         ...
 )
@@ -28,7 +28,7 @@ which results in a `CREATE TABLE` statement of:
 
 [source,sql]
 ----
-CREATE TABLE isisExtSecman."ApplicationUser" (
+CREATE TABLE causewayExtSecman."ApplicationUser" (
     ...
 )
 ----
