ISIS-3260: fixes some antora bad links

--- a/antora/components/refguide-index/modules/applib/pages/index/services/layout/hooks/LayoutServiceMenu_020-examples-and-usage.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/layout/hooks/LayoutServiceMenu_020-examples-and-usage.adoc
@@ -5,4 +5,4 @@
 == See also
 
 * xref:refguide:applib:index/services/layout/LayoutService.adoc[LayoutService]
-* xref:refguide:applib:index/services/layout/Style.adoc[Style]
+* xref:refguide:applib:index/services/layout/LayoutExportStyle.adoc[LayoutExportStyle]
