--- a/commons/src/main/adoc/modules/commons/pages/about.adoc
+++ b/commons/src/main/adoc/modules/commons/pages/about.adoc
@@ -3,13 +3,13 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
 _Apache Causeway Commons_ is a library with utilities, that are shared with the entire
-_Apache Isis_ ecosystem.
+_Apache Causeway_ ecosystem.
 
 == Motivation
 
 This module was initially created, to remove dependence on 3^rd^ party (general purpose)
 _Java_ libraries like _Guava_ or _Apache Commons_. This should reduce the likelihood for
-_Apache Isis_ developers to run into _jar_ version conflicts, when using one of these
+_Apache Causeway_ developers to run into _jar_ version conflicts, when using one of these
 3^rd^ party libraries.
 
 It now also allows us to collect utilities in support of common idioms, that we use
